--- a/public/main.html
+++ b/public/main.html
@@ -228,7 +228,7 @@ hr{
 <div class="section">
   <div class="video-container">
   <video controls autoplay muted width="360" height="640" preload="auto" loop>
-  <source src="../videos/video_oficial.mp4" type="video/mp4">
+  <source src="../assets/videos/video_oficial.mp4" type="video/mp4">
 
   Tu navegador no admite la reproducción de vídeo.
   </video>
